--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script
-      src="https://kit.fontawesome.com/0f01a771b9.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://kit.fontawesome.com/0f01a771b9.js"></script>
 
     <title>TO DO</title>
-    <script defer type="module" src="script.js?speed=2"></script>
+    <script defer src="api-client.js"></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header><h1>TO DO</h1></header>
@@ -27,24 +25,6 @@
       />
       <button type="submit" class="addtaskbtn">Add</button>
     </form>
-    <div id="todolist">
-      <section class="todolist-item">
-        <input
-          type="checkbox"
-          class="checkbox"
-          name="a1da0015-05a7-43f9-9f23-747301d957d8"
-        /><label for="a1da0015-05a7-43f9-9f23-747301d957d8"
-          ><input
-            type="text"
-            class="inputfield"
-            value="Example"
-            readonly /></label
-        ><button
-          type="button"
-          class="fa-solid fa-trash-can"
-          id="a1da0015-05a7-43f9-9f23-747301d957d8"
-        ></button>
-      </section>
-    </div>
+    <div id="todolist"></div>
   </body>
 </html>
